updating min files

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"authors": [
 		{
 			"name": "Eric Gach",
-			"email": "eric@php-oop.net",
+			"email": "eric.gach@gmail.com",
 			"role": "Developer"
 		}
 	],
